# otus-21

./: .gitignore  CMakeLists.txt  README.md  ipsort.0.0.1--Linux.deb  ipsort.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml  release.yml
debpack/_CPack_Packages/Linux/DEB/: ipsort.0.0.1--Linux.deb
debpack/_CPack_Packages/Linux/DEB/ipsort.0.0.1--Linux/: control
